--- a/nas.yaml
+++ b/nas.yaml
@@ -1,9 +1,9 @@
 - hosts: nas_host
+  become: true
   vars_files:
     - ./nas-settings.yaml
   roles:
     - role: auto-upgrade
-      become: yes
     - role: dlna-server
     - role: file-server
     - role: pi-pxe-boot
