Add bridge and nftable roles
These roles make if possible to build complex network setups.

--- a/nas-settings.yaml
+++ b/nas-settings.yaml
@@ -2,6 +2,9 @@ auto_upgrade_additional_origins_pattern:
   # the 1password repo has some strange meta data
   - "o=. stable,a=stable"
 
+nftables_nat_rules:
+  - iifname priv-net masquerade
+
 dlna_server_directories:
     - path: /nas/ssd/share/MP3/Alben/
       type: A
