--- a/nas.yaml
+++ b/nas.yaml
@@ -3,6 +3,15 @@
   vars_files:
     - ./nas-settings.yaml
   roles:
+    - role: nftables
+    - role: bridge
+      vars:
+        ifname: priv-net
+        dhcp:
+          range_start: 192.168.1.100
+          range_end: 192.168.1.254
+        ipv4:
+          address: 192.168.1.1/24
     - role: auto-upgrade
     - role: dlna-server
     - role: file-server
