Add grafana container with static ip

--- a/containers.yaml
+++ b/containers.yaml
@@ -1,3 +1,8 @@
+- name: Setup static ips
+  hosts: grafana
+  roles:
+    - static-ip
+
 - name: Basic setup for nspawn containsers
   hosts: containers
   roles:
