--- a/inventory/nspawn-containers.yaml
+++ b/inventory/nspawn-containers.yaml
@@ -3,7 +3,17 @@ all:
     pihole:
       ansible_connection: machinectl
       ansible_host: pihole
+    grafana:
+      ansible_connection: machinectl
+      ansible_host: grafana
+      systemd_networkd: false
+      static_ip:
+        ifname: host0
+        ipv4:
+          address: 192.168.1.10/24
+          gateway: 192.168.1.1
   children:
     containers:
       hosts:
         pihole:
+        grafana:
