--- a/containers.yaml
+++ b/containers.yaml
@@ -21,10 +21,8 @@
 
 - name: Setup grafana container
   hosts: grafana
+  vars_files:
+    - containers/grafana-settings.yaml
   roles:
+    - name: prometheus.prometheus.prometheus
     - name: grafana.grafana.grafana
-      vars:
-        ansible_become: no
-        grafana_security:
-          admin_user: "{{lookup('community.general.onepassword', 'grafana admin', vault='nas', field='username')}}"
-          admin_password: "{{lookup('community.general.onepassword', 'grafana admin', vault='nas', field='password')}}"
