--- a/containers.yaml
+++ b/containers.yaml
@@ -1,3 +1,4 @@
+---
 - name: Setup static ips
   hosts: grafana
   roles:
@@ -8,7 +9,7 @@
   roles:
     - role: nspawn-container
       vars:
-        hostname: "{{inventory_hostname}}"
+        hostname: "{{ inventory_hostname }}"
     - role: auto-upgrade
 
 - name: Setup pihole container
@@ -17,12 +18,12 @@
     - role: pihole
   vars:
     pihole_web_password: "{{lookup('community.general.onepassword', 'pihole', vault='nas', field='password')}}"
-    pihole_dns_1: 10.143.174.1
+    pihole_dns_1: "10.143.174.1"
 
 - name: Setup grafana container
   hosts: grafana
   vars_files:
     - containers/grafana-settings.yaml
   roles:
-    - name: prometheus.prometheus.prometheus
-    - name: grafana.grafana.grafana
+    - prometheus.prometheus.prometheus
+    - grafana.grafana.grafana
