--- a/containers/grafana-settings.yaml
+++ b/containers/grafana-settings.yaml
@@ -1,3 +1,4 @@
+---
 # we are already root when connecting via machinectl and sudo is not installed
 ansible_become: false
 
@@ -15,7 +16,7 @@ grafana_datasources:
   - name: prometheus
     type: prometheus
     access: proxy
-    url: 'http://localhost:9090/prometheus/'
+    url: http://localhost:9090/prometheus/
     basicAuth: false
     jsonData:
       timeInterval: 15s
