--- a/roles/auto-upgrade/tasks/main.yaml
+++ b/roles/auto-upgrade/tasks/main.yaml
@@ -1,15 +1,16 @@
-- name: install unattended-upgrades
+---
+- name: Install unattended-upgrades
   ansible.builtin.package:
     name: unattended-upgrades
     state: present
 
-- name: configure unattended-upgrades
+- name: Configure unattended-upgrades
   template:
-    src: "{{item}}.j2"
-    dest: "/etc/apt/apt.conf.d/{{item}}"
+    src: "{{ item }}.j2"
+    dest: /etc/apt/apt.conf.d/{{ item }}
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   with_items:
     - 20auto-upgrades
     - 50unattended-upgrades
