--- a/roles/nspawn-host/tasks/debian-container.yaml
+++ b/roles/nspawn-host/tasks/debian-container.yaml
@@ -1,32 +1,34 @@
-- block:
-    - name: "container {{container.name}}: Bootstrap debian"
+---
+- name: Bootstrap container
+  block:
+    - name: "Bootstrap debian for {{ container.name }}"
       ansible.builtin.command: >-
         debootstrap --include=systemd,dbus,systemd-container,python3
-          stable "/var/lib/machines/{{container.name}}"
+          stable "/var/lib/machines/{{ container.name }}"
       args:
-        creates: "/var/lib/machines/{{container.name}}"
+        creates: /var/lib/machines/{{ container.name }}
 
   rescue:
-    - name: "container {{container.name}}: delete container folder after failure"
+    - name: "Delete container folder afer failure {{ container.name }}"
       ansible.builtin.file:
-        dest: "/var/lib/machines/{{container.name}}"
+        dest: /var/lib/machines/{{ container.name }}
         state: absent
 
-- name: "container {{container.name}}: Create nspawn file"
+- name: "Create nspawn file {{ container.name }}"
   ansible.builtin.template:
     owner: root
     group: root
-    mode: '0644'
+    mode: "0644"
     src: ../templates/container.nspawn.j2
-    dest: /etc/systemd/nspawn/{{container.name}}.nspawn
+    dest: /etc/systemd/nspawn/{{ container.name }}.nspawn
   register: config
 
-- name: "container {{container.name}}: Container should autostart and be started"
+- name: "Container should autostart and be started {{ container.name }}"
   ansible.builtin.service:
-    name: "systemd-nspawn@{{container.name}}"
+    name: systemd-nspawn@{{ container.name }}
     enabled: true
     state: started
 
-- name: "container {{container.name}}: Reboot container after config change"
-  ansible.builtin.command: machinectl reboot "{{container.name}}"
+- name: "Reboot container after config change {{ container.name }}"
+  ansible.builtin.command: machinectl reboot "{{ container.name }}"
   when: config.changed
