--- a/nas-settings.yaml
+++ b/nas-settings.yaml
@@ -6,6 +6,15 @@ auto_upgrade_additional_origins_pattern:
 nftables_nat_rules:
   - iifname priv-net masquerade
 
+
+bridge_bridges:
+  - ifname: priv-net
+    dhcp:
+      range_start: 192.168.1.100
+      range_end: 192.168.1.254
+    ipv4:
+      address: 192.168.1.1/24
+
 dlna_server_directories:
   - path: /nas/ssd/share/MP3/Alben/
     type: A
