--- a/roles/bridge/tasks/dhcp.yaml
+++ b/roles/bridge/tasks/dhcp.yaml
@@ -5,10 +5,10 @@
       - dnsmasq
     state: present
 
-- name: Bridge config {{ ifname }}
+- name: Bridge config {{ bridge.ifname }}
   ansible.builtin.template:
     src: templates/dnsmasq-dhcp.config.j2
-    dest: /etc/dnsmasq.d/bridge-{{ ifname }}.config
+    dest: /etc/dnsmasq.d/bridge-{{ bridge.ifname }}.config
     owner: root
     group: root
     mode: "0622"
