--- a/nas-settings.yaml
+++ b/nas-settings.yaml
@@ -15,6 +15,22 @@ bridge_bridges:
     ipv4:
       address: 192.168.1.1/24
 
+mail_settings:
+  username: "{{ lookup('community.general.onepassword', 'nas-mail-account', vault='nas', field='username') }}"
+  password: "{{ lookup('community.general.onepassword', 'nas-mail-account', vault='nas') }}"
+  smarthost: "{{ lookup('community.general.onepassword', 'nas-mail-account', vault='nas', field='smarthost') }}"
+exim4_mail_relay_mailname: "{{ ansible_fqdn }}"
+exim4_mail_relay_readhost: "{{ 1 | extract(mail_settings.username | split('@')) }}"
+exim4_mail_relay_smarthost: "{{ mail_settings.smarthost }}"
+exim4_mail_relay_passwd:
+  - host: "{{ 0 | extract(mail_settings.smarthost | split(':')) }}"
+    username: "{{ mail_settings.username }}"
+    password: "{{ mail_settings.password }}"
+exim4_mail_relay_additional_interfaces:
+  - 192.168.1.1
+exim4_mail_relay_nets:
+  - 192.168.1.1/24
+
 dlna_server_directories:
   - path: /nas/ssd/share/MP3/Alben/
     type: A
