--- a/inventory/nas.yaml
+++ b/inventory/nas.yaml
@@ -1,9 +1,5 @@
 ---
 all:
   hosts:
-    localhost:
+    nas:
       ansible_connection: local
-  children:
-    nas_host:
-      hosts:
-        localhost:
