--- a/inventory/host_vars/nas.yaml
+++ b/inventory/host_vars/nas.yaml
@@ -78,13 +78,11 @@ nh_containers:
   - name: pihole
     os: debian
     ports:
-      - tcp:8080:80
       - udp:53:53
+    bridge: priv-net
   - name: grafana
     os: debian
     bridge: priv-net
-    ports:
-      - tcp:3000:3000
 
 container_proxy_routes:
   - path: /grafana
@@ -93,3 +91,5 @@ container_proxy_routes:
   - path: /prometheus
     # no trailing / otherwise redirect loop
     backend: http://192.168.1.10:9090
+  - path: /pihole/
+    backend: http://192.168.1.5/admin/
