--- a/inventory/host_vars/grafana.yaml
+++ b/inventory/host_vars/grafana.yaml
@@ -15,6 +15,38 @@ prometheus_targets:
   node:
     - targets:
         - 192.168.1.1:9100
+prometheus_alert_rules_files:
+  - "inventory/grafana/prometheus/rules/*.rules"
+prometheus_alertmanager_config:
+  - path_prefix: /alertmanager/
+    static_configs:
+      - targets:
+          - localhost:9093
+
+alertmanager_web_external_url: http://localhost/alertmanager
+alertmanager_smtp:
+  from: 'grafana@wollawurst.info'
+  smarthost: 'localhost:25'
+  require_tls: false
+alertmanager_receivers:
+  - name: 'null'
+  - name: 'email'
+    email_configs:
+      - to: 'root@localhost'
+        send_resolved: true
+alertmanager_route:
+  group_by: ['alertname']
+  group_wait: 10s
+  group_interval: 10s
+  repeat_interval: 24h
+  receiver: 'email'
+  routes:
+    - match:
+        # we want to ignore the watchdog alert, it could be used to
+        # build a dead man switch that triggers an alert if this
+        # alert stops firing.
+        alertname: Watchdog
+      receiver: "null"
 
 grafana_url: http://0.0.0.0/grafana/
 grafana_security:
