Simplify inventory management

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,5 @@ collections_paths = ./
 
 # Installs roles into [current dir]/roles/namespace.rolename
 roles_path = ./roles
+
+inventory = ./inventory/hosts.yaml
