Also manage aliases with exim4 role

--- a/inventory/group_vars/containers.yaml
+++ b/inventory/group_vars/containers.yaml
@@ -1,3 +1,6 @@
 exim4_mail_relay_mailname: "{{ inventory_hostname }}"
 exim4_mail_relay_readhost: "wollawurst.info"
 exim4_mail_relay_smarthost: 192.168.1.1
+exim4_mail_relay_aliases:
+  - name: root
+    alias: "{{ lookup('community.general.onepassword', 'root-alias', vault='nas', field='alias') }}"
