Enable auto upgrade for pi01

--- a/roles/auto-upgrade/defaults/main.yaml
+++ b/roles/auto-upgrade/defaults/main.yaml
@@ -1,2 +1,6 @@
 ---
 auto_upgrade_mail: root
+auto_upgrades_origins_pattern:
+  - "o=${distro_id},n=${distro_codename}"
+  - "o=${distro_id},n=${distro_codename}-security"
+  - "o=${distro_id},n=${distro_codename}-updates"
