--- a/inventory/host_vars/nas.yaml
+++ b/inventory/host_vars/nas.yaml
@@ -84,3 +84,4 @@ container_proxy_routes:
     backend: http://192.168.1.10:9093
   - path: /pihole/
     backend: http://192.168.1.5/admin/
+    type: pihole
