--- a/roles/bridge/handlers/main.yaml
+++ b/roles/bridge/handlers/main.yaml
@@ -3,3 +3,6 @@
   ansible.builtin.service:
     name: dnsmasq
     state: restarted
+
+- name: Reload sysctl
+  ansible.builtin.command: sysctl --system
