--- a/roles/bridge/tasks/main.yaml
+++ b/roles/bridge/tasks/main.yaml
@@ -9,6 +9,16 @@
     path: /etc/network/interfaces
     line: source /etc/network/interfaces.d/*
 
+- name: Enable routing
+  ansible.builtin.copy:
+    dest: /etc/sysctl.d/50-ip-forwarding.conf
+    owner: root
+    group: root
+    mode: "0644"
+    content: |
+      net.ipv4.ip_forward = 1
+  notify: Reload sysctl
+
 - name: Create bridges
   ansible.builtin.include_tasks: "bridge.yaml"
   loop: "{{ bridge_bridges }}"
